<resources>
    <string name="app_name" translatable="false">The Weather</string>

    <string name="quit_tiltle" translatable="true">Quit</string>
    <string name="quit_message" translatable="true">Do you really want to quit?</string>
    <string name="back_text" translatable="true">Cancel</string>

    <string name="setting" translatable="true">Setting</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="configure" translatable="false">Configure</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="google_map_API_key" translatable="false">AIzaSyAsvRrYBZ770RpBDQNsbaOCsz3XZjD9Vc8</string>
    <string name="title" translatable="false">Weather Application</string>
    <string name="gps_network_not_enabled" translatable="true">GPS Network not enabled</string>
    <string name="open_location_settings" translatable="true">Setting</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="gps_network_enabled">GPS Network enable</string>
    <string name="Humidity" translatable="true">Humidity</string>
    <string name="Pressure" translatable="true">Pressure</string>
    <string name="WindSpeed" translatable="true">Wind Speed</string>
    <string name="DewPoint" translatable="true">Dew Point</string>
    <string name="CloudCover" translatable="true">Cloud Cover</string>
    <string name="UVIndex" translatable="true">UV Index</string>
    <string name="Visibility" translatable="true">Visibility</string>
    <string name="Ozone">Ozone</string>
    <string name="last_update" translatable="true">Last update</string>
    <string name="delete" translatable="true">Xóa</string>

    <string name="details_title" translatable="true">Details</string>
    <string name="next_24_hours_title" translatable="true">Next 24 Hours</string>
    <string name="air_quality_index_title" translatable="true">Air Quality Index</string>
    <string name="next_7_days_title" translatable="true">Next 7 Days</string>

    <string name="aqi_good" translatable="true">Good</string>
    <string name="aqi_moderate" translatable="true">Moderate</string>
    <string name="aqi_unhealthy_sensitive" translatable="true">Unhealthy for Sensitive Group</string>
    <string name="aqi_unhealthy" translatable="true">Unhealthy</string>
    <string name="aqi_very_unhealthy" translatable="true">Very Unhealthy</string>
    <string name="aqi_hazardous" translatable="true">Hazardous</string>

    <string name="aqi_good_des" translatable="true">Air quality is considered satisfactory</string>
    <string name="aqi_moderate_des" translatable="true">Air quality is acceptable</string>
    <string name="aqi_unhealthy_sensitive_des" translatable="true">Members of sensitive groups may experience health effects</string>
    <string name="aqi_unhealthy_des" translatable="true">Everyone may begin to experience health effects</string>
    <string name="aqi_very_unhealthy_des" translatable="true">Everyone may experience serious health effects</string>
    <string name="aqi_hazardous_des" translatable="true">Health warning of emergency conditions</string>

    <string name="sun" translatable="true">Sun</string>
    <string name="wind_title" translatable="true">Wind</string>
    <string name="wind_north" translatable="true">North</string>
    <string name="wind_north_east" translatable="true">Northeast</string>
    <string name="wind_north_west" translatable="true">Northwest</string>
    <string name="wind_east" translatable="true">East</string>
    <string name="wind_south" translatable="true">South</string>
    <string name="wind_south_east" translatable="true">Southeast</string>
    <string name="wind_south_west" translatable="true">Southwest</string>
    <string name="wind_west" translatable="true">West</string>

    <string name="pref_temp_title" translatable="true">Temperature</string>
    <string name="pref_temp_unit" translatable="false">Temperature</string>
    <string name="pref_temp_default_value" translatable="false">°C</string>
    <string name="pref_temp_default_summary" translatable="false">°C</string>
    <string-array name="pref_temp_entries">
        <item>°C</item>
        <item>°F</item>
    </string-array>
    <string name="pref_distance_title" translatable="true">Distance</string>
    <string name="pref_distance_unit" translatable="false">Distance</string>
    <string name="pref_distance_default_value" translatable="false">km</string>
    <string-array name="pref_distance_entries">
        <item>km</item>
        <item>miles</item>
    </string-array>
    <string name="pref_speed_title" translatable="true">Speed</string>
    <string name="pref_speed_unit" translatable="false">Speed</string>
    <string name="pref_speed_default_value" translatable="false">m/s</string>
    <string-array name="pref_speed_entries">
        <item>km/h</item>
        <item>mph</item>
        <item>m/s</item>
        <item>Beaufort</item>
    </string-array>
    <string name="pref_lang_title" translatable="true">Current Language</string>
    <string name="pref_lang_key" translatable="false">Language</string>
    <string name="pref_lang_default_entries" translatable="false">English</string>
    <string name="pref_lang_default_value" translatable="false">en</string>
    <string-array name="pref_lang_entries">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string-array name="pref_lang_values">
        <item>en</item>
        <item>vi</item>
    </string-array>
    <string name="pref_pressure_title" translatable="true">Pressure</string>
    <string name="pref_pressure_unit" translatable="false">Pressure</string>
    <string name="pref_pressure_default_value" translatable="false">mBar</string>
    <string-array name="pref_pressure_entries">
        <item>mBar</item>
        <item>inHg</item>
        <item>psi</item>
        <item>bar</item>
        <item>mmHg</item>
    </string-array>

    <string name="pref_unit_group_title" translatable="true">Units</string>
    <string name="pref_language_group_title" translatable="true">Language</string>
    <string name="pref_other_group_title" translatable="true">Others</string>

    <string name="pref_feedback" translatable="true">Feedback</string>
    <string name="pref_help" translatable="true">Help</string>
    <string name="pref_about" translatable="true">About</string>
    <string name="title_disconnect" translatable="true">No Internet Connection</string>
    <string name="message_disconnect" translatable="true">You need to have Mobile Data or wifi to access this.</string>
    <string name="index" translatable="true">Index</string>
    <string name="pref_notification_group_title" translatable="true">Notification</string>
    <string name="pref_daily_notification" translatable="true">Daily notification</string>
    <string name="pref_time_notification" translatable="true">Time</string>
    <string name="pref_daily_notification_key" translatable="false">daily_notification</string>
    <string name="pref_time_notification_key" translatable="false">time_notification_key</string>
    <string name="aqi_pm25" translatable="false"> PM 2.5  :</string>
    <string name="aqi_pm10" translatable="false"> PM 10  :</string>
    <string name="aqi_co" translatable="false"> Carbon Monoxide(CO)  :</string>
    <string name="aqi_o3" translatable="false"> Ozone(O3)  :</string>
    <string name="aqi_no2" translatable="false"> Nitrogen Dioxide(NO2)  :</string>
    <string name="aqi_so2" translatable="false"> Sulphur Dioxide(SO2)  :</string>
    <string name="aqi_not_available" translatable="false">N/A</string>
    <string name="content_notification" translatable="true">Open application to update</string>
    <string name="time_notification_default" translatable="false">06:00</string>
    <string name="update_successful">update information successful</string>
    <string name="feels_like">feels like:</string>

</resources>
