<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Units">
    <ListPreference
        android:key="@string/pref_temp_unit"
        android:title="@string/pref_temp_unit"
        android:defaultValue="@string/pref_temp_default_value"
        android:entries="@array/pref_temp_entries"
        android:entryValues="@array/pref_temp_entries">
    </ListPreference>
        <ListPreference
            android:key="@string/pref_distance_unit"
            android:title="@string/pref_distance_unit"
            android:entries="@array/pref_distance_entries"
            android:defaultValue="@string/pref_distance_default_value"
            android:entryValues="@array/pref_distance_entries">
        </ListPreference>
        <ListPreference
            android:key="@string/pref_speed_unit"
            android:title="@string/pref_speed_unit"
            android:entries="@array/pref_speed_entries"
            android:defaultValue="@string/pref_speed_default_value"
            android:entryValues="@array/pref_speed_entries">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Other">
        <Preference
            android:title="@string/pref_about"/>
    </PreferenceCategory>
</PreferenceScreen>